# druid-data-advisor

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/reference/: calculation-rules.json  enchantment-rules.json  fixed-build.json  stat-definitions.json  version-lock.json
data/user/candidates/: 2026-07-13-residual-ferocity-ring.json  amulet.json  amulet.verified.json  boots.json  boots.verified.json  chest.json  chest.verified.json  gloves.json  gloves.verified.json  helm.json  helm.verified.json  offhand.json  offhand.verified.json  pants.json  pants.verified.json  ring_1.json  ring_1.verified.json  ring_2.json  ring_2.verified.json  weapon.json  weapon.verified.json
data/user/history/: 20260713T111715.270562+0800-dd4c756bdb.json  20260713T193806.928536+0800-88915f5988.json  20260713T193807.268784+0800-3de1e63e0e.json  20260713T193807.563240+0800-d32a3e40cf.json  20260713T193807.849475+0800-93660d3021.json  20260713T193808.141262+0800-165ed713c5.json  20260713T193808.427598+0800-674871b3eb.json  20260713T193808.719560+0800-180aa8ebef.json  20260713T193809.055754+0800-24d9019511.json  20260713T193809.331603+0800-8f64eedd4a.json  20260713T193809.623581+0800-1bc3a0566b.json  (+1 more)
docs/: druid-s14-data-and-advisor-foundation.md  season13-damage-formula.md
scripts/: d4advisor  setup-local.sh
skills/d4-druid-advisor/: SKILL.md
src/d4advisor/: __init__.py  advisor_engine.py  calculations.py  cli.py  ocr_engine.py  ocr_parser.py  profile_fingerprint.py  profile_store.py  snapshot_compare.py  snapshot_renderer.py  versioning.py
(+5 files in other folders)
