[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "d4-druid-advisor"
version = "0.1.0"
description = "Local Diablo IV Druid character store, equipment OCR, and calculation helpers"
requires-python = ">=3.11"
dependencies = [
  "Pillow==12.3.0",
  "rapidocr_onnxruntime==1.4.4",
]

[project.optional-dependencies]
dev = ["pytest==9.1.1"]

[project.scripts]
d4advisor = "d4advisor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
